--- a/style.css
+++ b/style.css
@@ -1,4 +1,21 @@
-
+body {
+	background-color: #3498db;
+	color: #fff;
+	padding:  0 0 50px 0;
+}
+.bg {
+	background-image: url(https://i.imgur.com/i5zElCL.png);
+	height: 300px;
+	background-size: cover;
+	background-position: center calc(70%);
+	background-repeat: no-repeat;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+span.text-muted {
+	color: #fff !important;
+}
 #clockdiv{
 	font-family: sans-serif;
 	color: #fff;
